# FMQChallenge

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  asset_manager.h  ball.cpp  ball.h  ball_holder.cpp  ball_holder.h  element.h  game.cpp  game.h  main.cpp  node.cpp  node.h  scene.cpp  scene.h  sprite_element.cpp  sprite_element.h  sprite_node.cpp  sprite_node.h  text_element.cpp  text_element.h  ui.cpp  ui.h
